--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,4 @@ build-backend = "poetry.core.masonry.api"
 yolo-detect = "pytorchyolo.detect:run"
 yolo-train = "pytorchyolo.train:run"
 yolo-test = "pytorchyolo.test:run"
+yolo-id = "pytorchyolo.detect_l:run"
